# Projet-MNT

./: .gitignore  CMakeLists.txt  README.md  build.sh  mnt_sans_fourier_sans_ombrage.ppm
docs/: guerledan.ppm  mnt_avec_fourier.ppm  mnt_no_fourier.ppm
include/: colormap.hpp  fourier.hpp  geopoint.hpp  grid.hpp  mesh2D.hpp  ombrage.hpp  ppm.hpp  projector.hpp  rasterise.hpp  terraindata.hpp  terrainprojected.hpp  trianglelocator.hpp
src/: colormap.cpp  fourier.cpp  grid.cpp  main.cpp  mesh2D.cpp  ombrage.cpp  ppm.cpp  projector.cpp  rasterise.cpp  terraindata.cpp  terrainprojected.cpp  trianglelocator.cpp
